# Shipyard

./: .gitignore  README.md  Shipyard_SPEC.md  pyproject.toml  sitecustomize.py
docs/: ACCEPTANCE_SPEC.md  DEV_SPEC.md  PRD.md  PRODUCT_DOC_TEMPLATE.md  REAL_AGENT_DEMO.md  REAL_AGENT_HANDOFF_V1.md  REAL_AGENT_PROGRESS_V1.md  REAL_AGENT_STATUS_BOARD_V2.md  REAL_AGENT_STATUS_BOARD_V3.md  REAL_AGENT_STATUS_BOARD_V5.md  REAL_AGENT_STATUS_BOARD_V6.md  REAL_AGENT_STATUS_BOARD_V7.md  REAL_AGENT_SUMMARY_V1.md  REAL_AGENT_WINDOW_DEMO_V2.md  REAL_AGENT_WINDOW_DEMO_V3.md  REAL_AGENT_WINDOW_DEMO_V5.md  REAL_AGENT_WINDOW_DEMO_V6.md  REAL_AGENT_WINDOW_DEMO_V7.md  TASKS.md  TASKS.original.md  TASKS_TEMPLATE.md
shipyard/: __init__.py
src/shipyard/: __init__.py  agent_ui_runner.py  agent_window_runner.py  config.py  engine.py  exceptions.py  logger.py  main.py  models.py  repository.py  state_store.py  task_parser.py
src/shipyard.egg-info/: PKG-INFO  SOURCES.txt
src/shipyard/adapters/: __init__.py  builder_base.py  claude_builder.py  cli_utils.py  codex_verifier.py  mock_builder.py  mock_verifier.py  verifier_base.py
src/shipyard/services/: __init__.py  completion_service.py  handoff_service.py  task_selector.py  transition_service.py
tests/: conftest.py  test_engine_flow.py  test_real_adapters.py  test_reporting.py  test_resume_flow.py  test_state_store.py  test_task_parser.py  test_task_selector.py
